--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,6 +7,6 @@
         {{body}}
     </main>
     {{> include ../includes/footer}}
-    <script src="public/assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="public/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
