--- a/views/includes/head.hbs
+++ b/views/includes/head.hbs
@@ -5,7 +5,7 @@
     <title>REAL ESTATE - {{title}}</title>    
 
     <!-- Bootstrap core CSS -->
-<link href="public/assets/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="public/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
