--- a/views/userlogin.handlebars
+++ b/views/userlogin.handlebars
@@ -10,10 +10,14 @@
         <input type="email" class="form-cntrol" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter user email">
      
      </div>   
+     <div class="form-group">
+        <label for="inputPassword">Password</label>
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+     </div>
 
-        
+     <button type="submit" class="btn btn-primary">Submit</button>
     </div>
-
+    
     </div>
 </div>
 </main>
