--- a/views/pages/userlogin.hbs
+++ b/views/pages/userlogin.hbs
@@ -15,7 +15,7 @@
         <input type="password" class="form-control" id="inputPassword" placeholder="Password">
      </div>
 
-     <button type="submit" class="btn btn-primary">Submit</button>
+     <button type="submit" class="btn btn-primary">Log in</button>
     </div>
     
     </div>
